# Spendr-APIv1

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Spendr-API-V1.postman_collection.json
migration/: Cargo.toml
migration/src/: lib.rs  m20240507_092414_Create_User_Table.rs  m20240507_092448_Create_Transaction_Table.rs  m20240507_092508_Create_Budget_Table.rs  m20240507_092521_Create_Tip_Table.rs
src/: lib.rs  main.rs
src/database/: budget.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  tip.rs  transactions.rs  users.rs
src/middleware/: auth_middleware.rs
src/queries/: budget_queries.rs  mod.rs  tip_queries.rs  transactions_queries.rs  user_queries.rs
src/routes/: mod.rs
src/routes/budget/: budget_management.rs  mod.rs
src/routes/tip/: mod.rs  tip_management.rs
src/routes/transactions/: mod.rs  transaction_management.rs
src/routes/users/: authectication.rs  mod.rs  user_management.rs
src/utilities/: app_error.rs  jwt_utils.rs  mod.rs  password_utils.rs
